--- a/client/src/index.css
+++ b/client/src/index.css
@@ -123,7 +123,7 @@
     font-size: 1.3rem;
     text-decoration: none;
     padding: 0.5rem 1.2rem;
-    margin: 5px 0;
+    margin: 15px;
     border-radius: var(--border-radius);
     border: none;
     color: var(--dark);
@@ -177,9 +177,9 @@
   }
   
   .form-input {
-    width: 100%;
-    padding: 0.75rem;
-    margin: 0.2rem 0;
+    width: 90%;
+    padding: 20px;
+    margin: 5px;
     font-size: 1.2rem;
     border: 2px solid var(--dark);
     border-radius: var(--border-radius);
